fixed the search box padding issue on firefox

--- a/Pipeline/src/main/webapp/styles/app.scss
+++ b/Pipeline/src/main/webapp/styles/app.scss
@@ -147,7 +147,7 @@ md-sidenav#navframe.md-locked-open {
 
 		.search-input {
 			border: none;
-			padding: 15px;
+			padding: 7px;
 			font-size: 22px;
 			outline: none;
 /*			width: 645px;*/
